sh_binary(
    name = "aws.configure",
    srcs = ["aws_configure.sh"],
    env = {
        "AWS_CONFIG_FILE": "$(AWS_CONFIG_FILE)",
        "AWS_SHARED_CREDENTIALS_FILE": "$(AWS_SHARED_CREDENTIALS_FILE)",
        "AWS_DEFAULT_REGION": "$(AWS_DEFAULT_REGION)",
        "AWS_ACCESS_KEY_ID": "$(AWS_DEFAULT_ACCESS_KEY_ID)",
        "AWS_ACCESS_KEY_SECRET": "$(AWS_DEFAULT_ACCESS_KEY_SECRET)",
        "KUBECONFIG": "$(KUBE_CONFIG)",
    },
    toolchains = [
        "//sandbox:aws_env_vars",
        "//sandbox:workspace_env_vars",
    ],
)

sh_binary(
    name = "aws",
    srcs = ["aws.sh"],
    env = {
        "AWS_CONFIG_FILE": "$(AWS_CONFIG_FILE)",
        "AWS_SHARED_CREDENTIALS_FILE": "$(AWS_SHARED_CREDENTIALS_FILE)",
        "AWS_DEFAULT_REGION": "$(AWS_DEFAULT_REGION)",
        "KUBECONFIG": "$(KUBE_CONFIG)",
    },
    toolchains = [
        "//sandbox:aws_env_vars",
        "//sandbox:workspace_env_vars",
    ],
)

sh_binary(
    name = "eksctl",
    srcs = ["eksctl.sh"],
    env = {
        "AWS_CONFIG_FILE": "$(AWS_CONFIG_FILE)",
        "AWS_SHARED_CREDENTIALS_FILE": "$(AWS_SHARED_CREDENTIALS_FILE)",
        "AWS_DEFAULT_REGION": "$(AWS_DEFAULT_REGION)",
        "KUBECONFIG": "$(KUBE_CONFIG)",
    },
    toolchains = [
        "//sandbox:aws_env_vars",
        "//sandbox:workspace_env_vars",
    ],
)

sh_binary(
    name = "ec2.ssh",
    srcs = ["ssh.sh"],
    env = {
        "AWS_SHARED_CREDENTIALS_FILE": "$(AWS_SHARED_CREDENTIALS_FILE)",
        "AWS_CONFIG_FILE": "AWS_CONFIG_FILE",
        "AWS_DEFAULT_REGION": "AWS_DEFAULT_REGION",
        "SSH_KEY": "$(AWS_EC2_SSH_KEY_PATH)",
        "INSTANCE": "$(AWS_EC2_INSTANCE_SSH_PATH)",
    },
    toolchains = ["//sandbox:aws_env_vars"],
)

genrule(
    name = "aws-k8s-authenticator",
    outs = ["setup-auth.sh"],
    cmd = """
    curl -Lo $@ https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.5.9/aws-iam-authenticator_0.5.9_linux_amd64
    chmod +x $@
    """,
    tags = ["requires-network"],
)

sh_binary(
    name = "aws.k8s_auth",
    srcs = ["aws-k8s-authenticator"],
    args = ["init"],
    env = {
        "AWS_CONFIG_FILE": "$(AWS_CONFIG_FILE)",
        "AWS_SHARED_CREDENTIALS_FILE": "$(AWS_SHARED_CREDENTIALS_FILE)",
        "AWS_DEFAULT_REGION": "$(AWS_DEFAULT_REGION)",
        "KUBECONFIG": "$(KUBE_CONFIG)",
    },
    toolchains = [
        "//sandbox:aws_env_vars",
        "//sandbox:workspace_env_vars",
    ],
)

genrule(
    name = "kubeconfig",
    srcs = ["aws.sh"],
    outs = ["kconfig"],
    cmd = """
    export AWS_SHARED_CREDENTIALS_FILE=$(AWS_SHARED_CREDENTIALS_FILE)
    export AWS_CONFIG_FILE=$(AWS_CONFIG_FILE)
    export AWS_DEFAULT_REGION=$(AWS_DEFAULT_REGION)
    export AWS_ACCESS_KEY_ID=$(AWS_DEFAULT_ACCESS_KEY_ID)
    export AWS_ACCESS_KEY_SECRET=$(AWS_DEFAULT_ACCESS_KEY_SECRET),
    export KUBECONFIG=$@
    $(location aws.sh) eks update-kubeconfig --name $(AWS_EKS_CLUSTER_NAME)
    """,
    tags = ["requires-network"],
    toolchains = ["//sandbox:aws_env_vars"],
    visibility = ["//visibility:public"],
)

## curl -Lo aws-iam-authenticator https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.5.9/aws-iam-authenticator_0.5.9_linux_amd64
