load(":defs.bzl", "doctl_binary")

doctl_binary(
    name = "doctl",
    srcs = ["doctl.sh"],
)

genrule(
    name = "doctl.export_vars",
    outs = ["export_vars.sh"],
    cmd = """
    echo "
    #!/bin/bash

    export XDG_CONFIG_HOME=$(XDG_CONFIG_HOME)
    export KUBECONFIG=$(KUBE_CONFIG)

    " >$@
    """,
    toolchains = [
        "//sandbox:workspace_env_vars",
        "//sandbox:do_env_vars",
    ],
)
