load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("//sandbox/gcp:defs.bzl", "secret_version")
load("//tools/utils:defs.bzl", "substitution_file")

# Use with inline defining config variables bazel run //.... TAG=...

secret_version(
    name = "aws_rds_connection_host",
    secret = "$(GCP_AWS_RDS_HOST_SECRET)",
)

k8s_object(
    name = "config-map",
    cluster = "",
    kind = "service",
    kubeconfig = "//tools/aws:kubeconfig",
    substitutions = {
        "{ name }": "backend",
        "{ DATA_SOURCE_POSTGRES_URL }": "$(DATA_SOURCE_POSTGRES_URL)",
        "{ BACKEND_AUTH_VERIFY_WEBHOOK_URL }": "$(BACKEND_AUTH_VERIFY_WEBHOOK_URL)",
        "{ BACKEND_AUTH_API_URL }": "$(BACKEND_AUTH_API_URL)",
    },
    template = ":k8s-backend.configmap.yaml",
    toolchains = [
        "//sandbox:gcp_env_vars",
        "//sandbox:workspace_env_vars",
        "//sandbox:data_source_env_vars",
        "//sandbox:backend_env_vars",
    ],
)

k8s_object(
    name = "deployement",
    cluster = "",
    image_chroot = "$(GCP_DOCKER_ARTIFACTS_LOCATION)-docker.pkg.dev/$(GCP_PROJECT_ID)/$(GCP_DOCKER_ARTIFACTS_REPOSITORY)",
    images = {
        "$(GCP_DOCKER_ARTIFACTS_LOCATION)-docker.pkg.dev/$(GCP_PROJECT_ID)/$(GCP_DOCKER_ARTIFACTS_REPOSITORY)/$(GCP_DOCKER_BACKEND_IMAGE):{tag}".format(tag = "$(_TAG)"): "//server/apps/backend:backend_image",
    },
    kind = "deployment",
    kubeconfig = "//tools/aws:kubeconfig",
    substitutions = {
        "{ name }": "backend",
        "{ image }": "$(GCP_DOCKER_ARTIFACTS_LOCATION)-docker.pkg.dev/$(GCP_PROJECT_ID)/$(GCP_DOCKER_ARTIFACTS_REPOSITORY)/$(GCP_DOCKER_BACKEND_IMAGE):{tag}".format(tag = "$(_TAG)"),
        "{ backend_port }": "3000",
    },
    template = ":k8s-backend.deployement.yaml",
    toolchains = [
        "//sandbox:gcp_env_vars",
        "//sandbox:workspace_env_vars",
    ],
)

substitution_file(
    name = "backend_data_source_secret_yaml",
    data = [":aws_rds_connection_host"],
    file = "k8s-backend-data-source.configmap.yaml",
    substitutions = {
        "name": "backend",
        "RDS_HOST_64": "$$(cat $(location :aws_rds_connection_host) | base64)",
        "RDS_PORT_64": "$$(echo '5432' | base64)",
        "RDS_USERNAME_64": "$$(echo '$(AWS_RDS_POSTGRES_USERNAME)' | base64)",
        "RDS_PASSWORD_64": "$$(echo '$(AWS_RDS_POSTGRES_PASSWORD)' | base64)",
        "RDS_DB_64": "$$(echo '$(AWS_RDS_POSTGRES_DB_NAME)' | base64)",
    },
)

k8s_object(
    name = "data-source-configmap",
    cluster = "",
    kind = "configmap",
    kubeconfig = "//tools/aws:kubeconfig",
    template = ":backend_data_source_secret_yaml",
    toolchains = [
        "//sandbox:gcp_env_vars",
        "//sandbox:workspace_env_vars",
    ],
)

k8s_object(
    name = "service",
    cluster = "",
    kind = "service",
    kubeconfig = "//tools/aws:kubeconfig",
    substitutions = {
        "{ name }": "backend",
        "{ backend_port }": "3000",
    },
    template = ":k8s-backend.service.yaml",
    toolchains = [
        "//sandbox:gcp_env_vars",
        "//sandbox:workspace_env_vars",
    ],
)

k8s_objects(
    name = "backend",
    objects = [
        ":data-source-configmap",
        ":deployement",
        ":service",
        ":config-map",
    ],
    visibility = ["//visibility:public"],
)
