load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("//sandbox/gcp:defs.bzl", "secret_version")
load("//tools/aws:defs.bzl", "user_arn")

genrule(
    name = "dockerconfigjson",
    srcs = [
        ".dockerconfigjson",
        "//sandbox/gcp/secrets:artifacts_reader_sa",
    ],
    outs = [".dockerconfig.json"],
    cmd = """
    export REGION=$(GCP_REGION)
    export AUTH_STRING=$$(echo _json_key:$$(cat $(location //sandbox/gcp/secrets:artifacts_reader_sa)) | base64 | tr -d '\n')

    envsubst < $(location .dockerconfigjson) > $@
    """,
    toolchains = ["//sandbox:gcp_env_vars"],
)

genrule(
    name = "dockerconfigjson.base64",
    srcs = [":dockerconfigjson"],
    outs = [".dockerconfigjson_base64"],
    cmd = """
        cat $(location :dockerconfigjson) | base64 | tr -d '[:space:]' > $@
        """,
)

genrule(
    name = "generate_gar_secret_yaml",
    srcs = [
        "gar.secret.yaml",
        ":dockerconfigjson.base64",
    ],
    outs = ["generated_gar.secret.yaml"],
    cmd = "cat $(location :dockerconfigjson.base64) | xargs -I {} sed 's/{ DOCKERCONFIG }/{}/g' $(location gar.secret.yaml) > $@",
)

k8s_object(
    name = "cloud-builder-role",
    cluster = "",
    kind = "cluster-role",
    kubeconfig = "//sandbox/cluster:kubeconfig",
    substitutions = {
        "{ CLOUD_BUILDER_NAME }": "$(AWS_IAM_USER_CLOUD_BUILDER)",
    },
    template = "cloud_builder.cluster-role.yaml",
    toolchains = [
        "//sandbox:gcp_env_vars",
        "//sandbox:workspace_env_vars",
        "//sandbox:aws_env_vars",
    ],
)

k8s_object(
    name = "gar-secret",
    cluster = "",
    kind = "secret",
    kubeconfig = "//sandbox/cluster:kubeconfig",
    template = ":generate_gar_secret_yaml",
    toolchains = [
        "//sandbox:gcp_env_vars",
        "//sandbox:workspace_env_vars",
        "//sandbox:aws_env_vars",
    ],
)

k8s_objects(
    name = "general",
    objects = [
        ":gar-secret",
        # ":cloud-builder-role",
    ],
    visibility = ["//visibility:public"],
)
