load("//sandbox/gcp:defs.bzl", "secret_version")

secret_version(
    name = "backend_data_source_endpoint",
    secret = "$(GCP_AWS_RDS_POSTGRES_CONNECTION_ENDPOINT_SECRET_NAME)",
)

secret_version(
    name = "auth_data_source_endpoint",
    secret = "$(GCP_AWS_RDS_AUTH_SERVICE_POSTGRES_CONNECTION_ENDPOINT_SECRET_NAME)",
)

secret_version(
    name = "artifacts_reader_sa",
    secret = "$(GCP_ARTIFACTS_READER_SA_SECRET)",
)

secret_version(
    name = "aws_cloud_builder_ak",
    secret = "$(GCP_AWS_IAM_USER_CLOUD_BUILDER_SA_SECRET)",
)

secret_version(
    name = "do_tf_access_key",
    secret = "$(GCP_DO_TF_ACCESS_KEY_SECRET_NAME)",
    visibility = ["//visibility:public"],
)

secret_version(
    name = "gcp_cloud_builder_sa",
    secret = "$(GCP_CLOUD_BUILD_SA_SECRET)",
)

secret_version(
    name = "terraform_sa",
    secret = "$(GCP_TERRAFORM_SA_SECRET)",
)

secret_version(
    name = "gcp_development_sa",
    secret = "$(GCP_DEVELOPMENT_SA_SECRET)",
)
